# network-programming-labs

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/res/: main.qml
src/client/src/: main.cpp
src/client/src/app/: Client.cpp  MessagesModel.cpp  MessagesModel.h  app.cppm
src/lab1/client/res/: main.qml
src/lab1/client/src/: main.cpp
src/lab1/client/src/app/: Client.h  MessagesModel.h
src/lab1/server/src/: main.rs
src/lab2/server/: Cargo.toml
src/lab2/server/src/: error.rs  main.rs  tcp_server.rs
src/lab2/sockets/: Cargo.toml
src/lab2/sockets/client/: Cargo.toml
src/lab2/sockets/client/src/: app.rs  main.rs
src/lab2/sockets/server_utils/: Cargo.toml
src/lab2/sockets/server_utils/src/: cli.rs  lib.rs  message.rs
src/lab2/sockets/task/src/: lib.rs
src/lab2/sockets/tcp_server/: Cargo.toml
src/lab2/sockets/tcp_server/src/: error.rs  main.rs
src/lab2/sockets/udp_server/: Cargo.toml
src/lab2/sockets/udp_server/src/: error.rs  main.rs  message.rs
src/server/: Cargo.toml
src/server/src/: main.rs
