[package]
name = "lab1-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }